Update livrable3